# kma_weather

./: CHANGELOG.md  LICENSE  README.md  cabal.project  hie.yaml  kma_weather.cabal
app/: Main.hs
docs/: latlon.xlsx
src/: KMA.hs
