cabal-version:       2.4
name:                kma-weather
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              templateK of dummy
maintainer:          templateK of dummy <templatek@github.com>
copyright:           2020 templateK of dummy
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

common common-options
  build-depends:       base ^>= 4.13.0.0
                     , aeson
                     , servant
                     , servant-server
                     , servant-client
                     , servant-client-core
                     , text
                     , bytestring
                     , containers
                     , http-client

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns
                       GADTs
                       DataKinds
                       TypeOperators
                       FlexibleContexts
                       LambdaCase
                       BlockArguments
                       FlexibleInstances
                       MultiParamTypeClasses

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     KMA

executable kma-weather
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       kma-weather
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite kma-weather-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       kma-weather
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
